go to searchpage on smaller devices instead of typeahead + filtertab fix from small to large screen

--- a/packages/ndla-ui/src/Search/component.search-field.scss
+++ b/packages/ndla-ui/src/Search/component.search-field.scss
@@ -107,9 +107,11 @@ $overlay-height-mobile: 100px;
     .c-active-filters {
       display: none;
 
-      @include mq(desktop) {
+      @include mq(tablet) {
         display: flex;
-        height: 58px;
+      }
+      @include mq($until: desktop) {
+        padding-right: $spacing--small;
       }
     }
   }
@@ -120,7 +122,7 @@ $overlay-height-mobile: 100px;
     line-height: 48px;
     border: 1px solid $brand-grey--light;
     border-radius: 4px;
-    padding-right: 58px;
+    padding-right: $spacing--large;
     flex-grow: 1;
     outline: 0;
 
@@ -150,6 +152,8 @@ $overlay-height-mobile: 100px;
 
   &__button {
     position: absolute;
+    top: $spacing--small;
+    right: 38px;
     cursor: pointer;
     background: none;
     border: 0;
@@ -157,6 +161,8 @@ $overlay-height-mobile: 100px;
 
     @include mq(desktop) {
       padding: $spacing--small;
+      top: 5px;
+      right: 10px;
     }
 
     svg {
@@ -167,6 +173,7 @@ $overlay-height-mobile: 100px;
   }
 
   &__input-wrapper {
+    position: relative;
     display: flex;
     width: 100%;
     align-items: center;
