--- a/packages/ndla-ui/src/Search/component.toggle-search-button.scss
+++ b/packages/ndla-ui/src/Search/component.toggle-search-button.scss
@@ -29,6 +29,10 @@
     &--narrow {
       display: flex;
       margin-right: $spacing--small;
+      box-shadow: none;
+      @include mq(desktop) {
+        display: none;
+      }
     }
   }
 
